# translate_u_project_phases

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/dictionaryAVLTree/: DictionaryAVLTree.cpp  DictionaryAVLTree.h
src/dictionaryMenu/: DictionaryMenu.cpp  DictionaryMenu.h
src/structs/: AVLNode.h
src/translate/: translates.json
src/translateManager/: TranslateManager.cpp  TranslateManager.h
src/ui/auth/userOptionsUI/: UserOptionsUI.cpp  UserOptionsUI.h
src/ui/welcomeUI/: WelcomeUI.cpp  WelcomeUI.h
src/utils/TranslationFileHandler/: TranslationFileHandler.cpp  TranslationFileHandler.h
src/utils/audioPlayer/: AUDIOPlayer.cpp  AUDIOPlayer.h
src/utils/jsonReader/: JSONReader.cpp  JSONReader.h
